#==============================================================================#
#
#                      XIOS - http://metasophia.org/xios
#
#   This file is part of the XIOS, distributed under the ISC License.
#   Please see the LICENSE.txt file for details on copyright and licensing.
#
#==============================================================================#

IF( ENABLE_MAKE_TEST )
  ADD_SUBDIRECTORY( "tester" )
ENDIF()
